<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:background="@color/black"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp">


            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:text="@string/Fname"
                android:gravity="center"/>

            <EditText
                android:id="@+id/fname"
                android:layout_width="210dp"
                android:layout_height="30dp"
                android:background="@color/white"
                android:inputType="text"
                android:hint="Banga"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp">


            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:text="@string/Lname"
                android:gravity="center"/>

            <EditText
                android:id="@+id/lname"
                android:layout_width="210dp"
                android:layout_height="30dp"
                android:inputType="text"
                android:hint="Akin SemaAnkh"
                android:background="@color/white"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp">


            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:text="@string/yob"
                android:gravity="center"/>

            <EditText
                android:id="@+id/yob"
                android:layout_width="210dp"
                android:layout_height="30dp"
                android:inputType="number"
                android:hint="1980"
                android:background="@color/white"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:text="@string/gender" />

            <RadioGroup
                android:id="@+id/groupradio"
                android:layout_width="210dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radiom"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:background="@color/white"
                    android:text="@string/mas" />

                <RadioButton
                    android:id="@+id/radiof"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="50dp"
                    android:background="@color/white"
                    android:text="@string/fem" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:backgroundTint="@color/white"
                android:text="@string/Mix"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:backgroundTint="@color/white"
                android:text="@string/add"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:backgroundTint="@color/white"
                android:text="@string/Clear"
                android:textColor="@color/black" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/listcontent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:textColor="@color/white"/>
        </ScrollView>
    </LinearLayout>

</LinearLayout>